<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VivaUnisc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_activity_informacao_adcional">MyActivityInformacaoAdcional</string>
    <string name="title_activity_activity_informacao_adcional">Informações Gerais</string>
    <string name="title_activity_activity_cadastro">Cadastro</string>
    <string name="title_activity_list_item">list_item</string>

    <!-- Validacaos -->
    <string name="error_valNome">Nome obrigatório!</string>
    <string name="error_valEmail">Email obrigatório!</string>
    <string name="error_valCidade">Cidade deve estar no padrão autocomple ou não preencher! (ex: "Canoas - Rio Grande do Sul, Brasil"</string>
    <string name="erro_valCharEmail">Caracteres inválidos o email</string>

    <color name="black">#000000</color>

    <!-- Cadastro -->
    <string name="cadastro_ButtonCarregar">Carregar</string>
    <string name="cadastro_ButtonTirarFoto">Tirar Foto</string>
    <string name="cadastro_txtViewNomeCompleto">Nome Completo:</string>
    <string name="cadastro_txtViewEmail">Email:</string>
    <string name="cadastro_txtViewTelefone">Telefone:</string>
    <string name="cadastro_txtViewCidade">Cidade:</string>
    <string name="cadastro_ButtonCadastrar">Cadastrar</string>

    <!-- Informação Adcional -->
    <string name="infAd_txtViewCurso">Curso</string>
    <string name="infAd_txtViewDtHr">Data e Hora</string>
    <string name="infAd_txtViewDuracao">Duração</string>
    <string name="infAd_txtViewDescricao">Descrição</string>
    <string name="infAd_txtViewResponsavel">Responsável</string>
    <string name="infAd_txtViewLocal">Local</string>
    <string name="infAd_txtViewVagas">Vagas</string>
    <string name="infAd_txtViewInscritos">Inscritos</string>

    <!-- Inicio -->
    <string name="inicio_txtViewBoasVindas">Bem-Vindo ao App do Viva Unisc</string>
    <string name="inicio_ButtonCliqueAqui">Clique aqui para ver as Oficinas</string>
    <string name="inicio_txtViewDesenvolvido">Desenvolvido por:</string>

    <!-- Oficinas -->
    <string name="oficinas_txtViewSelectOficinas">Oficinas - Selecione uma Oficina</string>
    <string name="oficinas_ButtonParticipar">Participar</string>
    <string name="oficinas_ButtonInformacao">Informações</string>
    <string name="title_activity_activity_map">ActivityMap</string>
    <string name="title_activity_activity_grafico">ActivityGrafico</string>
    <string name="title_activity_show_web_chart">ShowWebChartActivity</string>
    <string name="title_activity_pie_char">PieChar</string>

</resources>
