<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.unisc.gabrielcalderaro.vivaunisc.ActivityCadastro"
    android:background="#0099CC" >


    <ImageView
        android:id="@+id/fotoUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_ButtonCarregar"
        android:id="@+id/buttonCarregar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:onClick="carregaImage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_ButtonTirarFoto"
        android:id="@+id/buttonTirarFoto"
        android:layout_below="@+id/buttonCarregar"
        android:layout_centerHorizontal="true"
        android:onClick="tiraFoto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cadastro_txtViewNomeCompleto"
        android:id="@+id/textViewNomeCompleto"
        android:layout_below="@+id/buttonCarregar"
        android:layout_marginTop="78dp"
        android:layout_marginLeft="0pt"/>

    <EditText
        android:layout_width="1in"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/editTextNomeCompleto"
        android:layout_below="@+id/buttonCarregar"
        android:layout_toRightOf="@+id/textViewNomeCompleto"
        android:layout_marginTop="70dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cadastro_txtViewEmail"
        android:id="@+id/textViewEmail"
        android:layout_below="@+id/buttonCarregar"
        android:layout_alignRight="@+id/textViewNomeCompleto"
        android:layout_marginTop="108dp"
        android:layout_marginLeft="0pt"/>

    <EditText
        android:layout_width="1in"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/editTextEmail"
        android:layout_below="@+id/buttonCarregar"
        android:layout_toRightOf="@+id/textViewEmail"
        android:layout_marginTop="100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cadastro_txtViewTelefone"
        android:id="@+id/textViewCelular"
        android:layout_below="@+id/buttonCarregar"
        android:layout_alignRight="@+id/textViewNomeCompleto"
        android:layout_marginTop="138dp"
        android:layout_marginLeft="0pt"/>

    <EditText
        android:layout_width="1in"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/editTextCelular"
        android:layout_below="@+id/buttonCarregar"
        android:layout_toRightOf="@+id/textViewEmail"
        android:layout_marginTop="130dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cadastro_txtViewCidade"
        android:id="@+id/textViewCidade"
        android:layout_below="@+id/buttonCarregar"
        android:layout_alignRight="@+id/textViewNomeCompleto"
        android:layout_marginTop="178dp"
        android:layout_marginLeft="0pt"/>

    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autocomplete"
        android:layout_below="@+id/buttonCarregar"
        android:layout_toRightOf="@+id/textViewEmail"
        android:layout_marginTop="160dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_ButtonCadastrar"
        android:id="@+id/buttonSalvar"
        android:onClick="salvarCadastro"
        android:layout_below="@+id/autocomplete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="1in"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/id_oficina"
        android:layout_below="@+id/buttonSalvar"
        android:visibility="invisible" />


</RelativeLayout>
