<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.unisc.gabrielcalderaro.vivaunisc.ActivityInformacaoAdcional"
    android:background="#0099CC" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="..."
        android:id="@+id/titulo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19px"
        android:textColor="#000033" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infAd_txtViewCurso"
        android:id="@+id/curso"
        android:layout_below="@+id/titulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infAd_txtViewDtHr"
        android:id="@+id/data_hora"
        android:layout_below="@+id/curso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infAd_txtViewDuracao"
        android:id="@+id/duracao"
        android:layout_below="@+id/data_hora"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infAd_txtViewDescricao"
        android:id="@+id/descricao"
        android:layout_below="@+id/duracao"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infAd_txtViewResponsavel"
        android:id="@+id/responsavel"
        android:layout_below="@+id/resposta4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="150px"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infAd_txtViewLocal"
        android:id="@+id/local"
        android:layout_below="@+id/responsavel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infAd_txtViewVagas"
        android:id="@+id/vagas"
        android:layout_below="@+id/local"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infAd_txtViewInscritos"
        android:id="@+id/inscritos"
        android:layout_below="@+id/vagas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="..."
        android:id="@+id/resposta1"
        android:layout_above="@+id/resposta2"
        android:layout_alignLeft="@+id/resposta2"
        android:layout_alignStart="@+id/resposta2"
        android:textColor="#000033" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="..."
        android:id="@+id/resposta2"
        android:layout_alignTop="@+id/data_hora"
        android:layout_above="@+id/resposta2"
        android:layout_alignLeft="@+id/resposta2"
        android:layout_alignStart="@+id/resposta2"
        android:layout_centerHorizontal="true"
        android:textColor="#000033" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="..."
        android:id="@+id/resposta3"
        android:layout_below="@+id/resposta2"
        android:layout_alignLeft="@+id/resposta2"
        android:layout_alignStart="@+id/resposta2"
        android:textColor="#000033" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="..."
        android:id="@+id/resposta4"
        android:layout_below="@+id/resposta3"
        android:layout_alignLeft="@+id/resposta3"
        android:layout_alignStart="@+id/resposta3"
        android:textColor="#000033" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="..."
        android:id="@+id/resposta5"
        android:layout_alignTop="@+id/responsavel"
        android:layout_alignLeft="@+id/resposta4"
        android:layout_alignStart="@+id/resposta4"
        android:textColor="#000033" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="..."
        android:id="@+id/resposta6"
        android:layout_above="@+id/vagas"
        android:layout_alignLeft="@+id/resposta5"
        android:layout_alignStart="@+id/resposta5"
        android:textColor="#000033" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="..."
        android:id="@+id/resposta7"
        android:layout_below="@+id/resposta6"
        android:layout_alignLeft="@+id/resposta6"
        android:layout_alignStart="@+id/resposta6"
        android:textColor="#000033" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="..."
        android:id="@+id/resposta8"
        android:layout_below="@+id/resposta7"
        android:layout_alignLeft="@+id/resposta7"
        android:layout_alignStart="@+id/resposta7"
        android:textColor="#000033" />

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/myNetworkImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/resposta8"
        android:layout_toRightOf="@+id/responsavel"
        android:layout_toEndOf="@+id/responsavel" />
</RelativeLayout>
</ScrollView>