<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/inicio"
    android:background="#0099CC">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="300px"
        android:src="@drawable/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/inicio_txtViewBoasVindas"
        android:id="@+id/textView"
        android:layout_marginTop="137dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio_ButtonCliqueAqui"
        android:id="@+id/button"
        android:onClick="listarOficinas"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mostrar Mapa"
        android:id="@+id/buttonMapa"
        android:onClick="mostrarMapa"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/inicio_txtViewDesenvolvido"
        android:id="@+id/textView2"
        android:layout_below="@+id/buttonMapa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Willian Serafini"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Moisés Rodrigues"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Gabriel Gonçalves P. Calderaro"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />
</RelativeLayout>